토큰 교환 부분
토큰 검사 컴포넌트 수정 요망

--- a/backends-main/config/.env
+++ b/backends-main/config/.env
@@ -1,6 +1,15 @@
-MYSQL_HOST="203.234.52.138"
+# 연구실 세팅값
+MYSQL_HOST="203.234.48.124"
 MYSQL_USER="tester"
 MYSQL_PASSWORD="1234"
 MYSQL_DATABASE="test"
 MYSQL_PORT=43306
+
+
+# 황룡도서관 세팅값
+# MYSQL_HOST="203.234.52.138"
+# MYSQL_USER="tester"
+# MYSQL_PASSWORD="1234"
+# MYSQL_DATABASE="test"
+# MYSQL_PORT=43306
 JWT_SECRET=33e86a
