--- a/no-style/package.json
+++ b/no-style/package.json
@@ -16,6 +16,7 @@
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.18.0",
     "firebase": "^10.9.0",
+    "jwt-decode": "^4.0.0",
     "mysql2": "^3.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
