--- a/no-style/package.json
+++ b/no-style/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "es-hangul": "^1.3.5",
     "express": "^4.19.2",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.18.0",
