--- a/no-style/package.json
+++ b/no-style/package.json
@@ -64,6 +64,9 @@
   "directories": {
     "lib": "lib"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.15.0"
+  },
   "author": "",
   "license": "ISC"
 }
