--- a/backends-main/config/.env
+++ b/backends-main/config/.env
@@ -1,10 +1,16 @@
 # 연구실 세팅값
-MYSQL_HOST="203.234.48.124"
-MYSQL_USER="tester"
-MYSQL_PASSWORD="1234"
-MYSQL_DATABASE="test"
-MYSQL_PORT=43306
+# MYSQL_HOST="203.234.48.124"
+# MYSQL_USER="tester"
+# MYSQL_PASSWORD="1234"
+# MYSQL_DATABASE="test"
+# MYSQL_PORT=43306
 
+# maria db
+MYSQL_HOST="svc.sel5.cloudtype.app",
+MYSQL_USER="tester",
+MYSQL_PASSWORD="1234",
+MYSQL_DATABASE="test",
+MYSQL_PORT=30235
 
 # 황룡도서관 세팅값
 # MYSQL_HOST="203.234.52.138"
